<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.solutions.friendy.Fragments.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/topbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:padding="@dimen/space10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        style="@style/headingText"
                        android:padding="@dimen/space6"
                        android:text="@string/nikename" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        app:cardCornerRadius="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <EditText
                                android:id="@+id/email_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:drawableLeft="@drawable/ic_baseline_account_box_24"
                                android:drawableTint="@color/appColor"
                                android:drawablePadding="@dimen/space10"
                                style="@style/normalText"
                                android:background="@android:color/white"
                                android:hint="@string/user_hints"
                                android:inputType="textEmailAddress"
                                android:padding="@dimen/space6"
                                android:singleLine="true" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:id="@+id/ll_hide_for_fb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            style="@style/headingText"
                            android:padding="@dimen/space6"
                            android:text="@string/birthday" />

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            app:cardCornerRadius="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:padding="5dp">

                                <EditText
                                    android:id="@+id/et_dob"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:drawableLeft="@drawable/ic_cake"
                                    android:drawableTint="@color/appColor"
                                    android:drawablePadding="@dimen/space10"
                                    style="@style/normalText"
                                    android:inputType="none"
                                    android:background="@android:color/white"
                                    android:hint="yyyy-mm-dd"
                                    android:editable="false"
                                    android:padding="@dimen/space6"
                                    android:singleLine="true" />
                                <!--                            android:drawableRight="@drawable/ic_calendar"-->
                                <!--                            android:drawableTint="@color/appColor"-->

                            </LinearLayout>

                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            style="@style/headingText"
                            android:padding="@dimen/space6"
                            android:text="@string/gender" />

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            app:cardCornerRadius="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:padding="5dp">

                                <RadioGroup
                                    android:orientation="vertical"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <RadioButton
                                        android:id="@+id/rb_male"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:checked="true"
                                        android:text="Male" />

                                    <RadioButton
                                        android:id="@+id/rb_female"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="Female" />

                                </RadioGroup>

                            </LinearLayout>

                        </com.google.android.material.card.MaterialCardView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            style="@style/headingText"
                            android:padding="@dimen/space6"
                            android:text="@string/password" />

                        <com.google.android.material.card.MaterialCardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            app:cardCornerRadius="2dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:orientation="horizontal"
                                android:padding="5dp">

                                <EditText
                                    android:id="@+id/et_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:drawableLeft="@drawable/ic_password"
                                    android:drawablePadding="@dimen/space10"
                                    style="@style/normalText"
                                    android:background="@android:color/white"
                                    android:hint="@string/password_hints"
                                    android:inputType="textPassword"
                                    android:padding="@dimen/space6"
                                    android:singleLine="true" />

                                <ImageView
                                    android:layout_gravity="center_vertical"
                                    android:padding="@dimen/space5"
                                    android:id="@+id/iv_password_show"
                                    android:layout_marginLeft="@dimen/space8"
                                    android:tint="@color/appColor"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_remove_red_eye_black_24dp"/>

                            </LinearLayout>

                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    style="@style/buttonStyle"
                    android:layout_margin="@dimen/space10" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</RelativeLayout>