<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.OtpActivity">

    <include layout="@layout/topbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/space150"
                android:layout_height="@dimen/space110"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space20"
                android:padding="@dimen/space10"
                android:src="@drawable/logo" />

            <TextView
                style="@style/normalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space10"
                android:padding="@dimen/space5"
                android:text="Please enter the code we sent to"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_number_show"
                style="@style/headingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space8"
                android:text=""
                android:textSize="@dimen/text16" />

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/space45"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="@android:color/black"
                app:bar_enabled="false"
                app:bar_height="2dp"
                app:height="40dp"
                app:length="4"
                app:otp_box_background_active="@drawable/otp_box"
                app:otp_box_background_error="@drawable/otp_box_error"
                app:otp_box_background_inactive="@drawable/otp_box_inactive"
                app:otp_box_background_success="@drawable/otp_box_success"
                app:otp_text_size="@dimen/sp_15"
                app:width="40dp" />

            <LinearLayout
                android:id="@+id/ll_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space15"
                android:layout_marginBottom="@dimen/space15"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="@dimen/space10"
                android:paddingBottom="@dimen/space10"
                android:visibility="gone">

                <TextView
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_not_recieve_otp"
                    android:textColor="@android:color/black" />


                <TextView
                    android:id="@+id/tv_resend_otp_link"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space3"
                    android:text="@string/resend_code"
                    android:textColor="@color/colorAccent" />


            </LinearLayout>

            <!--                <LinearLayout-->
            <!--                    android:layout_alignRight="@id/ll_otp_enter"-->
            <!--                    android:layout_below="@id/ll_otp_enter"-->
            <!--                    -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="vertical"
                android:padding="@dimen/space5">

                <LinearLayout
                    android:id="@+id/ll_resend_top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space10"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="@dimen/space5"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/do_not_otp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text16" />

                    <TextView
                        android:id="@+id/tv_resend_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space5"
                        android:text="@string/resend"
                        android:textColor="@color/appColor"
                        android:textSize="@dimen/text16"
                        android:visibility="gone" />


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="@dimen/space10"
                    android:padding="@dimen/space5">

                    <TextView
                        android:id="@+id/text_view_countdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="00:00"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text18" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>